// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should render default correctly 1`] = `
<div class="fx-modal fx-popup fx-dialog" style="z-index: 2000; display: none;">
  <div class="fx-mask"></div>
  <div class="fx-modal_box">
    <div class="fx-modal_box-inner">
      <div class="fx-dialog_header">
        title
      </div>
      <div class="fx-dialog_content">
        <div class="fx-dialog_content-text">
          content
        </div>
      </div>
      <div class="fx-dialog_footer fx-horizontal-hairline">
        <div class="fx-button-group size--large pattern--borderless shape--rectangle count--1 fx-dialog_footer-inner"><button type="button" class="fx-button type--default size--large pattern--borderless shape--rectangle fx-dialog_button">
            <!----> <span>
        取消
      </span>
          </button> <button type="button" class="fx-button type--primary size--large pattern--borderless shape--rectangle fx-dialog_button">
            <!----> <span>
        确定
      </span>
          </button></div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Dialog should render prop showCancel=false correctly 1`] = `
<div class="fx-modal fx-popup fx-dialog" style="z-index: 2000; display: none;">
  <div class="fx-mask"></div>
  <div class="fx-modal_box">
    <div class="fx-modal_box-inner">
      <div class="fx-dialog_header">
        title
      </div>
      <div class="fx-dialog_content">
        <div class="fx-dialog_content-text">
          content
        </div>
      </div>
      <div class="fx-dialog_footer fx-horizontal-hairline">
        <div class="fx-button-group size--large pattern--borderless shape--rectangle count--1 fx-dialog_footer-inner">
          <!----> <button type="button" class="fx-button type--primary size--large pattern--borderless shape--rectangle fx-dialog_button">
            <!----> <span>
        确定
      </span>
          </button>
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;
